Call RegisterBeginFrameSource after creating DirectLayerTreeFrameSink

Register BeginFrameSource after creating DirectLayerTreeFrameSink so
that we don't miss any frames.

Bug: 735805
Change-Id: I04d946c43631dc2c3c67adaabe368c11b91f1c1e